--- a/JoMAR/Views/Shared/_Layout.cshtml
+++ b/JoMAR/Views/Shared/_Layout.cshtml
@@ -18,7 +18,10 @@
             </div>
             <nav>
                 <ul id="menu">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Rooms", "Index", "Home")</li>
+                    @if(Request.IsAuthenticated) {
+                    <li>@Html.ActionLink("Profile", "Profile", "Home")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                 </ul>
             </nav>
