--- a/JoMAR/Content/Site.css
+++ b/JoMAR/Content/Site.css
@@ -10,7 +10,7 @@ body
     font-family: "Trebuchet MS" , Verdana, Helvetica, Sans-Serif;
     margin: 0;
     padding: 0;
-    color: #CCFF99;
+    color: #FFCC00;
 }
 
 a:link {
