getRoom e bare en test, skal erstattes med Chat

--- a/JoMAR/Content/Site.css
+++ b/JoMAR/Content/Site.css
@@ -324,3 +324,10 @@ div#title {
 .tri-state {
     width: 6em;
 }
+
+/* Egendefinerte stiler
+-----------------------------------------------------------*/
+#ChatRooms
+{
+   width: 300px;
+}
