--- a/JoMAR/Views/Rooms/PublicRooms.cshtml
+++ b/JoMAR/Views/Rooms/PublicRooms.cshtml
@@ -15,7 +15,7 @@
 
 <p>
     <td>
-     @Html.ActionLink("Create new room", "ceRooms") <td>&nbsp; &nbsp;</td>
+     @Html.ActionLink("Create new room", "create") <td>&nbsp; &nbsp;</td>
      @Html.ActionLink("Go to room", "getRoom") 
     </td>
 </p>
