--- a/JoMAR/Views/Rooms/editRooms.cshtml
+++ b/JoMAR/Views/Rooms/editRooms.cshtml
@@ -1,6 +1,11 @@
 ﻿@model JoMAR.ChatRoom
 
-<script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
+@{
+    ViewBag.Title = "editRooms";
+}
+
+<h2>editRooms</h2>
+
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
@@ -8,6 +13,8 @@
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>ChatRoom</legend>
+
+        @Html.HiddenFor(model => model.RoomID)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Name)
@@ -42,7 +49,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Save" />
         </p>
     </fieldset>
 }
