--- a/JoMAR/Views/Rooms/About.cshtml
+++ b/JoMAR/Views/Rooms/About.cshtml
@@ -4,5 +4,11 @@
 
 <h2>About</h2>
 <p>
-     Put content here.
+     Site is developed by:
+
+     <br /><br />- Jon Martin Mikalsen
+     <br />- Alexander Wold
+     <br />- Runar Ingebrigtsen
+
+     <br /><br />Altså: JoMAR
 </p>
