--- a/JoMAR/Content/Site.css
+++ b/JoMAR/Content/Site.css
@@ -327,7 +327,7 @@ div#title {
 
 /* Egendefinerte stiler
 -----------------------------------------------------------*/
-#ChatRooms
+#addToRoomList
 {
    width: 300px;
 }
