--- a/JoMAR/Views/Rooms/eProfile.cshtml
+++ b/JoMAR/Views/Rooms/eProfile.cshtml
@@ -1,7 +1,10 @@
-﻿@model JoMAR.ChatRoom
+﻿@model JoMAR.aspnet_User
 
+@{
+    ViewBag.Title = "eProfile";
+}
 
-<h2>editRooms</h2>
+<h2>eProfile</h2>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
@@ -9,34 +12,34 @@
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
-        <legend>ChatRoom</legend>
+        <legend>aspnet_User</legend>
 
-        @Html.HiddenFor(model => model.RoomID)
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
-        </div>
-        <div class="editor-field">
-            @User.Identity.Name
-
-            @Html.ValidationMessageFor(model => User.Identity.Name)
-        </div>
+        @Html.HiddenFor(model => model.UserId)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.isPublic)
+            @Html.LabelFor(model => model.UserName)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.isPublic)
-            @Html.ValidationMessageFor(model => model.isPublic)
+            @Html.EditorFor(model => model.UserName)
+            @Html.ValidationMessageFor(model => model.UserName)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.isPrivate)
+            @Html.LabelFor(model => model.IsAnonymous)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.isPrivate)
-            @Html.ValidationMessageFor(model => model.isPrivate)
+            @Html.EditorFor(model => model.IsAnonymous)
+            @Html.ValidationMessageFor(model => model.IsAnonymous)
         </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.LastActivityDate)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.LastActivityDate)
+            @Html.ValidationMessageFor(model => model.LastActivityDate)
+        </div>
+
         <p>
             <input type="submit" value="Save" />
         </p>
