--- a/JoMAR/Views/Rooms/profile.cshtml
+++ b/JoMAR/Views/Rooms/profile.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "edit";
+    ViewBag.Title = "profile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Partial("editRooms")
+@Html.Partial("eProfile")
