--- a/JoMAR/Views/Shared/_Layout.cshtml
+++ b/JoMAR/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <li>@Html.ActionLink("Public Rooms", "PublicRooms", "Rooms")</li>
                     @if(Request.IsAuthenticated) {
                     <li>@Html.ActionLink("My Rooms", "MyRooms", "Rooms")</li>
-                    <li>@Html.ActionLink("Profile", "Profile", "Rooms")</li>
+                    <li>@Html.ActionLink("Profile", "profile", "Rooms")</li>
                     }
                     <li>@Html.ActionLink("About", "About", "Rooms")</li>
                 </ul>
