--- a/JoMAR/Views/Shared/_Layout.cshtml
+++ b/JoMAR/Views/Shared/_Layout.cshtml
@@ -30,6 +30,12 @@
             </nav>
         </header>
         <section id="main">
+            @if (Session["jomarmessage"] != "") {
+            <div id="jomarmessage">
+                <h1>@Session["jomarmessage"]</h1>
+                @{ Session["jomarmessage"] = ""; }
+            </div>
+            }
             @RenderBody()
         </section>
         <footer>
