--- a/JoMAR/Views/Shared/_Layout.cshtml
+++ b/JoMAR/Views/Shared/_Layout.cshtml
@@ -18,12 +18,10 @@
             </div>
             <nav>
                 <ul id="menu">
-                    <li>@Html.ActionLink("Edit rooms", "edit", "Rooms")</li>
-                    <li>@Html.ActionLink("Create rooms", "create", "Rooms")</li>
                     <li>@Html.ActionLink("Public Rooms", "PublicRooms", "Rooms")</li>
                     @if(Request.IsAuthenticated) {
                     <li>@Html.ActionLink("My Rooms", "MyRooms", "Rooms")</li>
-                    <li>@Html.ActionLink("Profile", "profile", "Rooms")</li>
+                    <li>@Html.ActionLink("Profile", "Profile", "Chat")</li>
                     }
                     <li>@Html.ActionLink("About", "About", "Rooms")</li>
                 </ul>
