Endret deleteview, lagt til storre messageboard

--- a/JoMAR/Content/Site.css
+++ b/JoMAR/Content/Site.css
@@ -340,7 +340,8 @@ div#title {
 
 /* Egendefinerte stiler
 -----------------------------------------------------------*/
-#addToRoomList
+.messageBoard
 {
-   width: 300px;
+   width: 800px;
+   height: 300px;
 }
