--- a/JoMAR/Views/Shared/_Layout.cshtml
+++ b/JoMAR/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
             </nav>
         </header>
         <section id="main">
-            @if (Session["jomarmessage"] != "") {
+            @if (Session["jomarmessage"] != null) {
             <div id="jomarmessage">
                 <h1>@Session["jomarmessage"]</h1>
-                @{ Session["jomarmessage"] = ""; }
+                @{ Session["jomarmessage"] = null; }
             </div>
             }
             @RenderBody()
