Add users to rooms

--- a/JoMAR/Content/Site.css
+++ b/JoMAR/Content/Site.css
@@ -246,6 +246,10 @@ table th {
     color: White;
 }
 
+.right-float  {
+    float: right;
+}
+
 /* MISC  
 ----------------------------------------------------------*/
 .clear {
