--- a/JoMAR/Views/Shared/_Layout.cshtml
+++ b/JoMAR/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
             </div>
             <nav>
                 <ul id="menu">
-                    <li>@Html.ActionLink("Public Rooms", "PublicRooms", "Rooms")</li>
+                    <li>@Html.ActionLink("Public Rooms", "Public", "Rooms")</li>
                     @if(Request.IsAuthenticated) {
-                    <li>@Html.ActionLink("My Rooms", "MyRooms", "Rooms")</li>
+                    <li>@Html.ActionLink("My Rooms", "Private", "Rooms")</li>
                     <li>@Html.ActionLink("Profile", "Profile", "Chat")</li>
                     }
                     <li>@Html.ActionLink("About", "About", "Rooms")</li>
