--- a/JoMAR/Views/Rooms/Private.cshtml
+++ b/JoMAR/Views/Rooms/Private.cshtml
@@ -48,6 +48,42 @@
 }
 </table>
 
+<h2>My memberships</h2>
+<table>
+    <tr>
+        <th>
+            Chatroom
+        </th>
+        <th>
+            isPublic
+        </th>
+        <th>
+            isPrivate
+        </th>
+        <th></th>
+    </tr>
+@foreach (JoMAR.ChatRoom item in Model.Memberships)
+{
+    {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.isPublic)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.isPrivate)
+        </td>
+        <td>
+            @Html.ActionLink("Enter room", "", "Chat/" + item.Name)
+        </td>
+    </tr>
+    }
+}
+
+</table>
+
 
 
 
