--- a/JoMAR/Views/Chat/Index.cshtml
+++ b/JoMAR/Views/Chat/Index.cshtml
@@ -24,12 +24,25 @@
                 }
             </ul>
         </div>
-
+        <button type="button">Click Me!</button>
         <div class="display-label">MessageBoard</div>
         <div class="display-field">
-            @Html.TextArea("Messages", Model.Messages(), new { @class = "messageBoard"})
+        
+            @Html.TextArea("Messages",new { @class = "messageBoard"})
+
             <script type="text/javascript">
                 Messages.scrollTop = Messages.scrollHeight;
+
+                window.setInterval(yourfunction, 500);
+
+                function yourfunction() {
+                    $.getJSON("/Jason/getMessages/@Model.RoomID", function (result) {
+                        
+                            $("textarea#Messages").val(result.join("\n"));
+                        
+                    });
+                }
+                                                    
             </script>
         </div>
 
