--- a/JoMAR/Views/Essemess/Index.cshtml
+++ b/JoMAR/Views/Essemess/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model JoMAR.Models.SMS
+           
+@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Essemess output</h2>
 
-@ViewBag.mama
+@Model.GetId
