--- a/JoMAR/Views/Chat/Index.cshtml
+++ b/JoMAR/Views/Chat/Index.cshtml
@@ -40,11 +40,12 @@
                     });
                 }
 
-                function publishMessage {
+                function publishMessage() {
                       $("#target").submit(function(e){
                          alert("Submitted");
                      });
                 }
+           
                                                     
             </script>
         </div>
