--- a/JoMAR/Views/Chat/Index.cshtml
+++ b/JoMAR/Views/Chat/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h2>@Html.DisplayTextFor(model => model.Name)</h2>
 
+
+
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
@@ -29,25 +31,7 @@
         
             @Html.TextArea("Messages",new { @class = "messageBoard"})
 
-            <script type="text/javascript">
-                Messages.scrollTop = Messages.scrollHeight;
-
-                window.setInterval(getPosts, 100);
-
-                function getPosts() {
-                    $.getJSON("/Jason/getMessages/@Model.RoomID", function (result) {                      
-                            $("textarea#Messages").val(result.join("\n"));   
-                    });
-                }
-
-                function publishMessage() {
-                      $("#target").submit(function(e){
-                         alert("Submitted");
-                     });
-                }
-           
-                                                    
-            </script>
+            
         </div>
 
         <div class="editor-label">
@@ -59,7 +43,30 @@
         </div>
 
         <p>
-            <input type="submit" value="Publish message" />
+            <input type="submit" value="Publish message" class="button" />
         </p>
     </fieldset>
 }
+<script type="text/javascript">
+    Messages.scrollTop = Messages.scrollHeight;
+
+    window.setInterval(getPosts, 100);
+
+    function getPosts() {
+        $.getJSON("/Jason/getMessages/@Model.RoomID", function (result) {
+            $("textarea#Messages").val(result.join("\n"));
+        });
+    }
+
+
+    $("form").submit(function () {
+        $.ajax({
+            type: "POST",
+            url: "/Chat/JonsssRoom",
+            data: $(this).serialize(),
+            success: getPosts()
+        });
+        return false;
+    });
+
+</script>
