--- a/JoMAR/Views/Chat/Index.cshtml
+++ b/JoMAR/Views/Chat/Index.cshtml
@@ -62,7 +62,7 @@
     $("form").submit(function () {
         $.ajax({
             type: "POST",
-            url: "/Chat/JonsssRoom",
+            url: "/Chat/@Model.Name",
             data: $(this).serialize(),
             success: getPosts()
         });
