register with full name and cell phone

--- a/JoMAR/Views/Account/Register.cshtml
+++ b/JoMAR/Views/Account/Register.cshtml
@@ -53,6 +53,30 @@
                 @Html.ValidationMessageFor(m => m.ConfirmPassword)
             </div>
 
+            <div class="editor-label">
+                @Html.LabelFor(m => m.FirstName)
+            </div>
+            <div class="editor-field">
+                @Html.TextBoxFor(m => m.FirstName)
+                @Html.ValidationMessageFor(m => m.FirstName)
+            </div>
+
+            <div class="editor-label">
+                @Html.LabelFor(m => m.LastName)
+            </div>
+            <div class="editor-field">
+                @Html.TextBoxFor(m => m.LastName)
+                @Html.ValidationMessageFor(m => m.LastName)
+            </div>
+
+            <div class="editor-label">
+                @Html.LabelFor(m => m.CellPhone)
+            </div>
+            <div class="editor-field">
+                @Html.TextBoxFor(m => m.CellPhone)
+                @Html.ValidationMessageFor(m => m.CellPhone)
+            </div>
+
             <p>
                 <input type="submit" value="Register" />
             </p>
