Change default viewpage and insert profile in global viewbag object

--- a/JoMAR/Views/Shared/_LogOnPartial.cshtml
+++ b/JoMAR/Views/Shared/_LogOnPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@if(Request.IsAuthenticated) {
+    @Html.Raw(@ViewBag.Profile.Image)
     <text>Welcome <strong>@User.Identity.Name</strong>!
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
 }
