--- a/JoMAR/Views/Shared/_LogOnPartial.cshtml
+++ b/JoMAR/Views/Shared/_LogOnPartial.cshtml
@@ -1,5 +1,7 @@
-﻿@if(Request.IsAuthenticated) {
-    @Html.Raw(@ViewBag.Profile.Image)
+﻿@if(@ViewBag.Profile != null) {
+        @Html.Raw(@ViewBag.Profile.Image)
+    }
+@if(Request.IsAuthenticated) {
     <text>Welcome <strong>@User.Identity.Name</strong>!
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
 }
