--- a/JoMAR/Views/Chat/Index.cshtml
+++ b/JoMAR/Views/Chat/Index.cshtml
@@ -34,17 +34,12 @@
         </div>
         <p>
             <input type="submit" value="Publish message" class="button" />
-            <input type="button" id="upload"  value="Publish message" onclick=sendToUpload() />
+            <input type="button" id="upload"  value="Upload File" onclick=sendToUpload() />
         </p>
-
-
-       
     </fieldset>
 }
 <script type="text/javascript">
     Messages.scrollTop = Messages.scrollHeight;
-    var windowSizeArray = ["width=200,height=200",
-                            "width=300,height=400,scrollbars=yes"];
 
     window.setInterval(getPosts, 1000);
     window.setInterval(getUsers, 5000);
@@ -59,8 +54,8 @@
             $("textarea#Messages").val(result.join("\n"));
         });
     }
-    $("Messages").clean();
 
+    //$("Messages").clean();
     $("form").submit(function () {
         $.ajax({
             type: "POST",
@@ -84,11 +79,15 @@
 
     function sendToUpload()
     {
-            $('#upload').click(function () {
-                var windowName = "Upload file"; //$(this).attr("name");
-                var windowSize = windowSizeArray[$(this).attr("rel")];
-                window.open('/Chat/UploadFile/', windowName, windowSize);
-                event.preventDefault();
+        var windowSizeArray = ["width=500,height=10",
+                            "width=600,height=10,scrollbars=yes"];
+        $('#upload').click(function () {
+            var windowName = "Upload file";
+            var windowSize = windowSizeArray;
+            window.open('/Chat/UploadFile/', windowName, windowSize);
+            event.preventDefault();
         });
     }
+
+   
 </script>
